fix arabic text alignment - display count of search result

--- a/src/app/dynamic-aya/dynamic-aya.component.scss
+++ b/src/app/dynamic-aya/dynamic-aya.component.scss
@@ -26,3 +26,9 @@ a{
 //  opacity: .2;
 //  filter: alpha(opacity=25);
 //}
+
+.arabicText{
+  float: right;
+  text-align: justify;
+  direction: rtl
+}
