--- a/src/app/root/root.component.scss
+++ b/src/app/root/root.component.scss
@@ -132,3 +132,26 @@ nav li:hover > .mega-menu {
 .main-banner {
   margin-bottom: 50px;
 }
+
+
+:host {
+  ::ng-deep .ui-autocomplete-input{
+    width: 400px;
+  }
+  //.ui-state-highlight{
+  //
+  //
+  //  }
+  ::ng-deep .ui-autocomplete-list-item {
+    direction: rtl;
+    text-align: initial
+
+      //span{
+        //float: right;
+        //text-align: justify;
+        //direction: rtl
+
+      //}
+  }
+}
+
